2018-04-12  Charlie Zender  <zender@uci.edu>

	* Improve English usage in ncrename HINT

2018-04-06  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.5-alpha01: Giant\'s Causeway';git push
	git tag -a 4.7.5-alpha01 -m 'Functionally identical to 4.7.4';git push --tags

	* NCO 4.7.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4: CSSI';git push
	git tag -a 4.7.4 -m 'CF OOG; CDF5 fix; support ESMF 7.1.0r conserve2nd, extrapolation; prn S5P L1B/L2; fix whitelist; enm/vln stubs';git push --tags

	* ncclimo: add mdl_nm = mpasseaice as synonym to mpascice

2018-04-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4-beta01: Ireland';git push
	git tag -a 4.7.4-beta01 -m 'elm/ctsm synonyms, revert ignore_degenerate';git push --tags

	* ncremap: add prc_typ='elm' and 'ctsm' as synonyms to 'clm' and 'alm'

2018-04-02  Charlie Zender  <zender@uci.edu>

	* ncremap do not set --ignore_degenerate by default (it would break most workflows with ERWG < 7.1.0r)

	* NCO 4.7.4-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4-alpha05: Globber';git push
	git tag -a 4.7.4-alpha05 -m 'sanitization sanity, enum/vlen stubs, document whitelist';git push --tags

	* Document whitelist

2018-04-01  Charlie Zender  <zender@uci.edu>

	* Add wrappers for user-defined types enum and vlen to libnco

	* Add globbing diagnostic to nco_sng_sntz()

	* Re-remove * and ? from whitelist

	* Fix data/Makefile.am symlink generation

2018-03-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.4-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4-alpha04: Non-Atomic Fireball';git push
	git tag -a 4.7.4-alpha04 -m 'ESMF conserve2nd, extrapolation, ignore_degenerate, ncks S5P L1B NTM';git push --tags

	* Print functions ignore rather than die on non-atomic variables, fixes S5P L1B/L2 issues

2018-03-28  Charlie Zender  <zender@uci.edu>
