@@ -239,7 +239,7 @@ Commands for LINUX are the only ones "regularly" used after ~2010
 # Yan Liu <yanliu@illinois.edu> # NCSA Maintainer = Yan Liu (github: yanliu-chn)
 # https://nersc.service-now.com/navpage.do # NERSC Maintainer = Yun (Helen) He
 # https://www.olcf.ornl.gov/support/submit-ticket # OLCF
-# Subject: Please upgrade NCO module to 4.7.4
+# Subject: Please upgrade to netCDF 4.6.1 and to NCO 4.7.4
 # Request: NCO 4.7.4 was released 4/6 and contains many features of interest to your ACME users. Please upgrade the system NCO module to 4.7.4 and make that the default NCO module. Thanks!
 
 zender@dust:~/nco$ pvmgetarch;uname -a;~/nco/autobld/config.guess
@@ -342,7 +342,7 @@ scp nco.configure.${GNU_TRP}.foo nco.config.log.${GNU_TRP}.foo nco.libtool.${GNU
 # LCRC uses Spack module written and tested by Adam Stewart: https://github.com/LLNL/spack/pull/4370/files
 # spack install --run-tests nco%gcc ^netcdf@4.4.0
 # Sysadmin upgrade request: support@lcrc.anl.gov
-# Latest ticket: AREQ0159277 on 20170526
+# Latest ticket: AREQ0159277 on 20170526, AREQ0215917 on 20180413
 # Latest sysadmin-compiled module usage: soft add +nco-4.6.7 # 20170526
 # Personal recipe last modified: 20161223
 # Personal recipe last used successfully: 20180406
@@ -364,8 +364,8 @@ make install >> nco.make.${GNU_TRP}.foo 2>&1
 scp nco.configure.${GNU_TRP}.foo nco.config.log.${GNU_TRP}.foo nco.libtool.${GNU_TRP}.foo nco.make.${GNU_TRP}.foo dust.ess.uci.edu:Sites/nco/rgr
 
 # icc/icpc 20171013 Zender uses this to develop/install/update netCDF4-enabled NCO in personal directories on cheyenne:
-# Sysadmin upgrade request: cislhelp@ucar.edu
-# Latest ticket: fxm on fxm
+# Sysadmin upgrade request: cislhelp@ucar.edu # NCAR Maintainer = Pat
+# Latest ticket: 216373 on 20180413
 # Latest sysadmin-compiled module usage: module load nco/4.6.9 # 20171002
 # Personal recipe last modified: 20180112
 # Personal recipe last used successfully: 20180302 (except ncap2, which would require backporting to intel 16.0.3 to get gsl)
@@ -382,8 +382,8 @@ cd ~/nco;git reset --hard origin/master
 cd ~/nco/bld;make NETCDF_ROOT='/glade/u/apps/ch/opt/netcdf/4.4.1.1/intel/17.0.1' UDUNITS_INC='/glade/u/apps/ch/opt/udunits/2.2.20/gnu/4.8.2/include' UDUNITS_LIB='/glade/u/apps/ch/opt/udunits/2.2.20/gnu/4.8.2/lib' OPTS=D allinone;cd -
 
 # 20150901: gcc/g++ Zender uses this to develop/install/update netCDF4-enabled NCO in personal directories on cooley:
-# Sysadmin upgrade request: 20170825
-# Latest ticket: alcf-support #345910
+# Sysadmin upgrade request: support@alcf.anl.gov # ALCF Maintainer = 
+# Latest ticket: alcf-support #345910 on 20170825, #367012 on 20180413
 # Latest sysadmin-compiled module usage: soft add +nco-4.6.8, soft add +netcdf-4.4.1.1
 # Personal recipe last modified: 20170825
 # Personal recipe last used successfully: 20171221
@@ -399,7 +399,8 @@ make install >> nco.make.${GNU_TRP}.foo 2>&1
 scp nco.configure.${GNU_TRP}.foo nco.config.log.${GNU_TRP}.foo nco.libtool.${GNU_TRP}.foo nco.make.${GNU_TRP}.foo dust.ess.uci.edu:Sites/nco/rgr
 
 # gcc/g++ Zender uses this to develop/install/update netCDF4-enabled NCO in personal directories on cori:
-# Sysadmin upgrade request: https://nersc.service-now.com/navpage.do
+# Sysadmin upgrade request: https://nersc.service-now.com/navpage.do # NERSC Maintainer = Yun (Helen) He
+# Latest ticket: INC0118469 on 20180413
 # Latest sysadmin-compiled module usage: module load nco/4.6.7 # 20170612 (without ncap2)
 # Personal recipe last modified: 20180125
 # Personal recipe last used successfully: 20180406
@@ -455,7 +456,7 @@ scp nco.configure.${GNU_TRP}.foo nco.config.log.${GNU_TRP}.foo nco.libtool.${GNU
 
 # gcc/g++ 20160107 Zender uses this to develop/install/update netCDF4-enabled NCO in personal directories on rhea:
 # Sysadmin upgrade request: https://www.olcf.ornl.gov/support/submit-ticket
-# Latest ticket: 358890 on 20170526
+# Latest ticket: 358890 on 20170526, 381695 on 20180413
 # Latest sysadmin-compiled module usage: module load nco/4.6.6 # 20170515
 # Personal recipe last modified: 20170814
 # Personal recipe last used successfully: 20180406
@@ -513,7 +514,7 @@ scp nco.configure.${GNU_TRP}.foo nco.config.log.${GNU_TRP}.foo nco.libtool.${GNU
 
 # gcc/g++ 20160420 Zender uses this to develop/install/update netCDF4-enabled NCO in personal directories on titan:
 # Sysadmin upgrade request: https://www.olcf.ornl.gov/support/submit-ticket
-# Latest ticket: 347675 on 20170316
+# Latest ticket: 347675 on 20170316, 381695 on 20180413
 # Latest sysadmin-compiled module usage: module load nco/4.6.6 # 20170411
 # Personal recipe last modified: 20170814
 # Personal recipe last used successfully: 20180406
