@@ -1,3 +1,7 @@
+2018-04-13  Charlie Zender  <zender@uci.edu>
+
+	* Create vlen.cdl and enum.cdl to test non-atomic types
+
 2018-04-12  Charlie Zender  <zender@uci.edu>
 
 	* Improve English usage in ncrename HINT
